--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#8B0000" />
+    <meta name="theme-color" content="#58180D" />
     <meta
       name="description"
       content="D&D Encounter Generator - Create balanced encounters for your party"
@@ -13,14 +13,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=MedievalSharp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap" rel="stylesheet">
     
-    <!-- Optional: Add some base styles -->
+    <!-- Base styles -->
     <style>
       body {
         margin: 0;
         padding: 0;
-        background-color: #1C1917;
+        background-color: #FCF5E5;
       }
       #root {
         min-height: 100vh;
